# arel

./: .gitignore  Cargo.toml  README.md  REAME.md
.github/workflows/: rust.yml
arel-codegen/: Cargo.toml
arel-macros/: Cargo.toml
arel-macros/src/: lib.rs
arel-macros/src/arel/: arel_active_model.rs  arel_base.rs  arel_model.rs  arel_model_trait.rs  arel_record.rs  arel_trait.rs  mod.rs
arel-macros/src/arel_attribute/: mod.rs
arel-macros/src/arel_enum/: mod.rs
arel-macros/src/inputs/: derive_input.rs  item_input.rs  mod.rs
arel_codegen/: Cargo.toml
arel_macros/: Cargo.toml
example/: Cargo.toml
example/src/: main.rs
example/src/entity/: user.rs
src/: error.rs  lib.rs  prelude.rs  sql.rs  traits.rs
src/active_model/: mod.rs
src/active_model/active_record/: mod.rs
src/db/: mod.rs  visitor.rs
src/manager/: mod.rs  select_manager.rs
src/sql/: mod.rs  query_builder.rs
src/statements/: delete.rs  group.rs  having.rs  increment.rs  insert.rs  join.rs  limit.rs  lock.rs  mod.rs  offset.rs  order.rs  select.rs  update.rs  where.rs
src/statements/filter/: and_filter.rs  filter_and.rs  filter_or.rs  mod.rs  or_filter.rs
src/statements/query/: where.rs
src/statements/where/: mod.rs  where_and.rs  where_or.rs
src/traits/: arel_active_model.rs  arel_attribute_from_row.rs  arel_model.rs  arel_persisted.rs  mod.rs
src/value/: active_value.rs  eq.rs  from.rs  mod.rs
src/value/active_value/: mod.rs
src/value/active_value/ops/: add.rs  div.rs  mod.rs  mul.rs  neg.rs  not.rs  rem.rs  sub.rs
src/value/active_vulue/: eq.rs  mod.rs
src/value/ops/: add.rs  div.rs  mod.rs  mul.rs  neg.rs  not.rs  rem.rs  sub.rs
src/value/ops/add/: add_i32.rs  mod.rs
src/value/ops/div/: div_i32.rs  mod.rs
src/value/ops/mul/: mod.rs  mul_i32.rs
src/value/ops/neg/: mod.rs
src/value/ops/not/: mod.rs
src/value/ops/rem/: mod.rs  rem_i32.rs
src/value/ops/sub/: mod.rs  sub_i32.rs
src/value/sub_value/: mod.rs
src/value/sub_value/value_array/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_big_int/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_big_int/ops/: add.rs  div.rs  mul.rs  neg.rs  rem.rs  sub.rs
src/value/sub_value/value_big_unsigned/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_big_unsigned/ops/: add.rs  div.rs  mul.rs  rem.rs  sub.rs
src/value/sub_value/value_bool/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_bool/ops/: mod.rs  not.rs
src/value/sub_value/value_bytes/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_chrono_date/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_chrono_datetime/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_chrono_time/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_chrono_timestamp/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_double/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_double/ops/: add.rs  div.rs  mul.rs  neg.rs  rem.rs  sub.rs
src/value/sub_value/value_float/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_float/ops/: add.rs  div.rs  mod.rs  mul.rs  neg.rs  rem.rs  sub.rs
src/value/sub_value/value_int/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_int/ops/: add.rs  div.rs  mul.rs  neg.rs  rem.rs  sub.rs
src/value/sub_value/value_json/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_small_int/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_small_int/ops/: add.rs  div.rs  mul.rs  neg.rs  rem.rs  sub.rs
src/value/sub_value/value_small_unsigned/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_small_unsigned/ops/: add.rs  div.rs  mul.rs  rem.rs  sub.rs
src/value/sub_value/value_string/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_tiny_int/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_tiny_int/ops/: add.rs  div.rs  mul.rs  neg.rs  rem.rs  sub.rs
src/value/sub_value/value_tiny_unsigned/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_tiny_unsigned/ops/: add.rs  div.rs  mod.rs  mul.rs  rem.rs  sub.rs
src/value/sub_value/value_unsigned/: eq.rs  from.rs  mod.rs
src/value/sub_value/value_unsigned/ops/: add.rs  div.rs  mul.rs  rem.rs  sub.rs
src/visitor/: mod.rs
tests/: tests.rs
tests/sqlite_sqlx/: mod.rs
