[workspace]
members = [".", "arel_macros", "arel_codegen"]

[workspace.dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
regex = "1.9"
anyhow = "1"
once_cell = "1.18"

uuid = "1"
serde_json = "1.0"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

[package]
name = "arel"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "a sql orm base sqlx"
authors = ["sanmu <hdy9515@dingtalk.com>"]
homepage = "https://github.com/rust-china/arel"
categories = ["database"]
keywords = ["async", "orm", "sqlite", "mysql", "postgres"]

[features]
default = ["with-json", "with-chrono", "sqlite"]
sqlite = ["sqlx/sqlite", "sqlx/any"]
postgres = ["sqlx/postgres", "sqlx/any"]
mysql = ["sqlx/mysql", "sqlx/any"]
runtime-tokio = ["sqlx/runtime-tokio"]
runtime-async-std = ["sqlx/runtime-async-std"]
tls-native-tls = ["sqlx/tls-native-tls"]
tls-rustls = ["sqlx/tls-rustls"]

with-json = ["serde_json", "bytes/serde", "chrono?/serde", "uuid?/serde", "sqlx/json"]
with-chrono = ["chrono", "sqlx/chrono"]

[package.metadata.docs.rs]
features = ["sqlite"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
arel = { path = ".", features = ["runtime-tokio", "tls-rustls"] }
tokio = { version = "1", features = ["full"] }

[dependencies]
regex = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }

serde = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }


uuid = { workspace = true, optional = true }
sqlx = { version = "0.7" }
