[workspace]
members = [".", "arel-macros", "./example"]

[workspace.dependencies]
log = "0.4"

uuid = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }

# =============================================================================================

[package]
name = "arel"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "a sql orm base sqlx"
authors = ["sanmu <578595193@qq.com>"]
homepage = "https://github.com/rust-china/arel"
categories = ["database"]
keywords = ["async", "orm", "sqlite", "mysql", "postgres"]

[features]
default = ["with-json", "with-chrono"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
runtime-tokio-native-tls = ["sqlx/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sqlx/runtime-tokio-rustls"]
runtime-tokio = ["sqlx/runtime-tokio"]
runtime-async-std-native-tls = ["sqlx/runtime-async-std-native-tls"]
runtime-async-std-rustls = ["sqlx/runtime-async-std-rustls"]
runtime-async-std = ["sqlx/runtime-async-std"]
tls-native-tls = ["sqlx/tls-native-tls"]
tls-rustls = ["sqlx/tls-rustls"]

with-json = ["serde_json", "bytes/serde", "chrono?/serde", "uuid?/serde", "sqlx/json"]
with-chrono = ["chrono", "sqlx/chrono"]

[package.metadata.docs.rs]
features = ["sqlite"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
arel = { path = ".", features = ["runtime-tokio", "tls-rustls"] }
tokio = { version = "1", features = ["full"] }

[dependencies]
once_cell = "1.18"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.9"

bytes = { version = "1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1", optional = true }
sqlx = { version = "0.7" }

# arel-macros = { version = "0.3.2" }
arel-macros = { path = "./arel-macros" }
