[package]
name = "arel-macros"
version = "0.0.4"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "arel macros"
authors = ["sanmu <578595193@qq.com>"]

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["extra-traits"] }
proc-macro2 = { version = "1" }
quote = { version = "1" }
