[package]
name = "example"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7" }

arel = { path = "..", features = ["runtime-tokio", "tls-rustls", "sqlite"] }
